# kycli

./:  build.py  .coveragerc  .gitignore  :memory:  ARTICLE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PERFORMANCE.md  README.md  ROADMAP_ADVANCED_WORKSPACES.md  ROADMAP_SCHEMAS_TABLES.md  SECURITY.md  TODO.md  benchmark.py  benchmark_10k.py  benchmark_scaling.py  enhancements.md  kvdata.pkl  kycli_config.sh  pyproject.toml  setup.py  status  validation_results.txt
.github/: workflows
.github/ISSUE_TEMPLATE/: bug_report.md
.github/prompts/: todo_remanini_roadmap_changes.prompt.md
.github/workflows/: publish.yml
docs/: DATA_MGMT.md  QUEUES_STACKS.md  RECOVERY.md  ROLES_PERMISSIONS.md  WORKSPACES.md
kycli/: __init__.py  build.md  cli.py  config.py  kycli.c  kycore.c  kycore.pyx  kyfactory.c  logging_utils.py  tui.py  utils.py
kycli.egg-info/: PKG-INFO  SOURCES.txt
kycli/core/: audit.c  audit.pyx  engine.c  engine.pyx  query.c  ref_impl.py  security.c  security.pxd  security.pyx  storage.c  storage.pyx
scripts/: debug_validation.sh  validate_install.sh
tests/: conftest.py  test_cli.py  test_cli_coverage.py  test_cli_coverage_gaps.py  test_cli_legacy.py  test_cli_roadmap.py  test_config.py  test_coverage_gap.py  test_init.py  test_kycore.py  test_scaling_features.py  test_tui.py  test_tui_watch_config.py  test_utils.py
tests/core/: test_concurrency.py  test_queues_stacks.py  test_roadmap_features.py  test_storage_scaling.py
tests/interface/: test_cli.py  test_gap_coverage.py  test_new_features.py  test_tui.py  test_workspaces.py
tests/performance/: kycli_benchmark.py
