[tool.poetry]
name = "kycli"
version = "0.1.5"
description = "**kycli** is a high-performance Python CLI toolkit built with Cython for speed."
authors = ["Balakrishna maduru <balakrishnamaduru@gmail.com>"]
readme = "README.md"
packages = [{include = "kycli"}]

[tool.poetry.dependencies]
python = ">=3.9"
prompt-toolkit = ">=3.0.43"
rich = ">=13.7.0"
tomli = ">=2.0.1"

[tool.poetry.scripts]
kycli = "kycli.cli:main"
kys = "kycli.cli:main"
kyg = "kycli.cli:main"
kyf = "kycli.cli:main"
kyl = "kycli.cli:main"
kyv = "kycli.cli:main"
kyd = "kycli.cli:main"
kyr = "kycli.cli:main"
kye = "kycli.cli:main"
kyi = "kycli.cli:main"
kyc = "kycli.cli:main"
kyh = "kycli.cli:main"
kyshell = "kycli.cli:main"


[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel", "cython"]
build-backend = "poetry.core.masonry.api"